# SteamDeck_SD_Card_Scanner

./: Cargo.toml  README.md
src/: app.rs  main.rs  scanner.rs  scanning.rs
src/app/: controller.rs  pages.rs  theming.rs  utils.rs
