[package]
name = "steamdeck_sd_card_scanner"
version = "1.1.4"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.1"
iced_winit = "0.12.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs = "5.0.1"